<resources>
    <string name="app_name">M-Expense</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="your_name">Your Name</string>
    <string name="show_profile">Show Profile</string>
    <string name="my_blog">My Blog</string>
    <string name="rp_5_205_000">RP. 5.205.000</string>
    <string name="total_of_your_expenses">Total of your Expenses</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="back_button_main_activity">Back Button Main Activity</string>
    <string name="button_to_show_date_picker">Button to Show Date Picker</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="work">Work</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log out</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="add_expense_data">Add Expense Data</string>
    <string name="liburan">Liburan</string>
    <string name="rp_500_000">Rp. 500.000</string>
    <string name="_2023_07_11">2023-07-11</string>
    <string name="debit">DEBIT</string>
    <string name="detail">Detail</string>
    <string name="payment_method">Payment Method</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="expense_type">Expense Type</string>
    <string name="update_text">Update</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="insert_data">Insert Data</string>
</resources>