<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ProfileActivity">

    <LinearLayout
        android:id="@+id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:background="#F5F5F5"
            android:contentDescription="@string/back_button_main_activity"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/detail_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="18dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtDate"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnShowDate"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:backgroundTint="#D8D8D8"
                android:contentDescription="@string/button_to_show_date_picker"
                android:paddingTop="5dp"
                android:text="@string/select"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/gender"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <AutoCompleteTextView
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/work"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/baseline_work_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWorkDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#03C988"
            android:text="@string/save_changes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#F45050"
            android:text="@string/log_out"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>