<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/ItemExpense"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liburan"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ExpensePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rp_500_000"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2023_07_11"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/expenseType"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


</LinearLayout>