<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageButton
                android:id="@+id/btnToProfile"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:background="#F5F5F5"
                android:contentDescription="@string/show_profile"
                android:src="@drawable/baseline_account_circle_24" />

            <ImageButton
                android:id="@+id/btnToWebView"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:background="#F5F5F5"
                android:contentDescription="@string/my_blog"
                android:src="@drawable/baseline_web_24" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/HighlightExpense"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topNavbar">

        <TextView
            android:id="@+id/yourExpenseTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/rp_5_205_000"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_of_your_expenses"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>